<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfilesMenu"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/yourProfiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="260dp"
                android:text="@string/yourProfiles" />

            <Button
                android:id="@+id/createNewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="260dp"
                android:text="@string/createNewProfile" />
            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="260dp"
                android:text="@string/logout" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
