<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.JoinByCodeFragment"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20sp"
                    android:gravity="center"
                    android:minWidth="120sp"
                    android:orientation="vertical"
                    android:layout_marginLeft="17dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:minWidth="250dp"
                        android:gravity="center"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/codeInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minHeight="48dp" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/joinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="260dp"
                android:text="@string/join" />
            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="260dp"
                android:text="@string/back"/>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>